<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoogleBookDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/thumbnail_image_google_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="120dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_top"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_google_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimaryDark"
                    tools:text="Harry Potter à L'école des Sorciers" />

                <TextView
                    android:id="@+id/tv_authors_google_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="Mark Murphy" />

                <TextView
                    android:id="@+id/tv_publisher_google_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top"
                    android:text="@string/publisher"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/tv_published_date_google_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="2018" />

                <TextView
                    android:id="@+id/tv_pages_google_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="@string/pages" />

                <TextView
                    android:id="@+id/tv_language_google_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    tools:text="@string/language" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_top">
                    <TextView
                        android:id="@+id/tv_previewLink_google_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:text="@string/preview_link"
                        android:textColor="@color/colorAccent" />

                    <Button
                        android:id="@+id/btn_add_to_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxHeight="32dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="@dimen/large_top_margin"
                        android:layout_marginRight="@dimen/large_top_margin"
                        android:background="@drawable/button_shape"
                        android:drawableEnd="@drawable/ic_favorite"
                        android:drawableRight="@drawable/ic_favorite"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:text="@string/add_to"
                        android:textColor="@color/text_shadow_white"
                        android:onClick="addToFav"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>



        <TextView
            android:id="@+id/tv_description_google_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_top_margin"
            tools:text="Prince Harry', description='Rebelle, fêtard et attachant, connu pour ses frasques médiatiques et ses girlfriends glamour, le fils cadet de Diana est aujourd’hui le membre le plus populaire de la famille royale. Protégé des médias pendant ses études, l’enfant terrible captive l’attention de la presse dès la fin de sa scolarité. De l’affaire de l’uniforme nazi aux soirées scandaleuses de Las Vegas, Harry se forge une réputation de prince rebelle, sans jamais perdre le soutien d’un peuple qui voit en lui l’enfant meurtri par la mort de sa mère. Duncan Larcombe, spécialiste de la famille royale, dresse un portrait authentique du jeune homme qu’il a appris à connaître au fil de ses reportages pour le Sun. Un prince curieux et avide d’expériences, bien décidé à reprendre le co" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_top_margin"
            android:text="@string/categories"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_categories_google_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top" />

    </LinearLayout>
</ScrollView>